plugins {
    id 'java'
}

group = 'org.lokhit'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.16.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.16.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview', '--release', '25']
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}
